--- a/public/css/flexslider.css
+++ b/public/css/flexslider.css
@@ -217,6 +217,8 @@ li.clone {
 }
 .flex-control-thumbs li img {
     padding: 0.5em;
+    width: 100px;
+    height: 95px;
 }
 /* ====================================================================================================================
  * RESPONSIVE
