--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2593,7 +2593,9 @@ fieldset[disabled] .form-control {
   cursor: not-allowed;
 }
 textarea.form-control {
-  height: auto;
+  /*height: auto;*/
+  height: 80px;
+
 }
 input[type="search"] {
   -webkit-appearance: none;
