--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -4,7 +4,7 @@
     /*border: 1px solid black;*/
 
 }
-h3{
+.h3_detail{
     font-family: "Droid Sans Mono Dotted";
     color: red;
     text-transform: uppercase;
@@ -16,6 +16,7 @@ h3{
 .pText{
     padding: 10px;
     font-size: 20px;
+    font-family: Consolas;
 }
 .do{
     color: #ff2828;
@@ -52,4 +53,18 @@ input[type=submit]{
     border-radius: 10px;
     text-shadow: 0px 1px 0px rgba(0,0,0,.5);
 
+}
+
+.th_cmt{
+    background: #f1f1f1;
+    padding-left: 8px;
+    height: 32px;
+    font-size: 18px;
+    font-family: Consolas;
+}
+.td_cmt{
+    height: 40px;
+    padding-left: 8px;
+    font-size: 18px;
+    font-family: Consolas;
 }
