--- a/public/css/memenu.css
+++ b/public/css/memenu.css
@@ -1,25 +1,25 @@
 .memenu {
-    margin: 5px 0 0 0;
-    padding: 0;
-    width: 100%;
-    list-style: none;
-    display: inline-block;
-    position: relative;
-    font-size: 15px;
+	margin: 5px 0 0 0;
+	padding: 0;
+	width: 100%;
+	list-style: none;
+	display: inline-block;
+	position: relative;
+	font-size: 15px;
 }
 .memenu li{
 	display:inline-block;
 }
 .memenu>li>a {
-    float: left;
-    padding-right: 45px;
-    color: #000;
-    font-size: 16px;
-    text-decoration: none;
-    transition: color .4s ease-in-out;
-    -moz-transition: color .4s ease-in-out;
-    -webkit-transition: color .4s ease-in-out;
-    -o-transition: color .4s ease-in-out;
+	float: left;
+	padding-right: 45px;
+	color: #000;
+	font-size: 16px;
+	text-decoration: none;
+	transition: color .4s ease-in-out;
+	-moz-transition: color .4s ease-in-out;
+	-webkit-transition: color .4s ease-in-out;
+	-o-transition: color .4s ease-in-out;
 }
 .memenu>li>.mepanel {
 	position: absolute;
@@ -45,17 +45,19 @@
 	display: block;
 }
 .me-one ul li a {
-    color: #999;
-    font-size: 13px;
+	/*color: #999;*/
+	color: #292727;
+	font-size: 13px;
 }
 .me-one ul li a:hover{
 	text-decoration:none;
 	color:#73B6E1;
 }
 .me-one h4 {
-    color: #73B6E1;
-    font-size: 1.1em;
-    text-align: left;
+	color:#0b89da;
+	/*color: #73B6E1;*/
+	font-size: 1.1em;
+	text-align: left;
 }
 .memenu .mepanel ul{
 	margin:0;
@@ -119,17 +121,17 @@
 	margin:15px 0 0 25px;
 	float:left;
 }.memenu>li.showhide span.icon1:after{
-	position:absolute;
-	content:"";
-	right:25px;
-	top:15px;
-	height:3px;
-	width:25px;
-	font-size:50px;
-	border-top:3px solid #fff;
-	border-bottom:3px solid #fff;
-	z-index:1;
-}
+	 position:absolute;
+	 content:"";
+	 right:25px;
+	 top:15px;
+	 height:3px;
+	 width:25px;
+	 font-size:50px;
+	 border-top:3px solid #fff;
+	 border-bottom:3px solid #fff;
+	 z-index:1;
+ }
 .memenu>li.showhide span.icon2:after{
 	position:absolute;
 	content:"";
@@ -141,16 +143,16 @@
 	border-top:3px solid #fff;
 	border-bottom:3px solid #fff;
 	z-index:1;
-}	
+}
 .skyblue li>a,.skyblue>li.showhide span{
 	color:#000;
 }
 .skyblue>li:hover>a,.skyblue>li.active>a,.skyblue .dropdown li:hover>a{
-	color:#73B6E1;
+	color:#0b89da;
 }.
-skyblue .mepanel img:hover,.skyblue form.contact input[type="text"]:focus,.skyblue form.contact textarea:focus{
-	border:solid 1px #0194be;
-}
+ skyblue .mepanel img:hover,.skyblue form.contact input[type="text"]:focus,.skyblue form.contact textarea:focus{
+	 border:solid 1px #0194be;
+ }
 .skyblue form.contact input[type="submit"]{
 	background:#0194be;
 }
@@ -168,7 +170,7 @@ skyblue .mepanel img:hover,.skyblue form.contact input[type="text"]:focus,.skybl
 		margin-top: 50px;
 		border: none;
 		width: 100%;
-		}
+	}
 	.me-one ul li {
 		text-align: left !important;
 	}
@@ -181,4 +183,4 @@ skyblue .mepanel img:hover,.skyblue form.contact input[type="text"]:focus,.skybl
 	.mepanel .row [class*="col"]{float:none;display:block;width:100%;margin-left:0;margin-top:15px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
 	.mepanel .row:first-child [class*="col"]:first-child{margin-top:0}
 	.mepanel .row{margin-top:0}.black{background:#222}
-	}
+}
